# xio

./: Cargo.toml  README.md
src/: fs.rs  lib.rs  split.rs
tests/: fs_tests.rs  lib_tests.rs
