[package]
name = "xio"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A utility library providing common functionality for file system operations and asynchronous file processing"
documentation = "https://docs.rs/xio"
repository = "https://github.com/rakki194/xio"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
walkdir = "2.5.0"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.16.0"

[lib]
name = "xio"
path = "src/lib.rs" 
