[package]
name = "xio"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "A utility library providing common functionality for file system operations and asynchronous file processing"
documentation = "https://docs.rs/xio"
repository = "https://github.com/rakki194/xio"
homepage = "https://github.com/rakki194/xio"
keywords = ["filesystem", "async", "io", "utility", "files"]
categories = ["filesystem", "asynchronous", "development-tools"]

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
walkdir = "2.5.0"
log = "0.4.26"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.17.1"

[lib]
name = "xio"
path = "src/lib.rs"
