[package]
name = "xio"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "A utility library providing common functionality for file system operations and asynchronous file processing"
documentation = "https://docs.rs/xio"
repository = "https://github.com/rakki194/xio"
homepage = "https://github.com/rakki194/xio"
keywords = ["filesystem", "async", "io", "utility", "files"]
categories = ["filesystem", "asynchronous", "development-tools"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
walkdir = "2.5.0"
log = "0.4.26"
tokio = { version = "1.44.1", features = ["full"] }
env_logger = "0.11.7"
futures = "0.3.31"
fancy-regex = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"

[dev-dependencies]
tempfile = "3.19.0"

[lib]
name = "xio"
path = "src/lib.rs"
